force-app/main/default/objects/Review__c/fields/Comment__c.field-meta.xml
<CustomField>

    
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <type>LongTextArea</type>
        <length>32768</length>
    
</CustomField>