force-app/main/default/objects/Review__c/fields/Product__c.field-meta.xml
<CustomField>

    
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>MasterDetail</type>
        <referenceTo>Product__c</referenceTo>
        <relationshipName>Reviews</relationshipName>
    
</CustomField>