force-app/main/default/objects/Review__c/fields/Rating__c.field-meta.xml
<CustomField>

    
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <type>Number</type>
        <scale>0</scale>
        <precision>1</precision>
    
</CustomField>